--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
-
+<a href="about.html">About Page</a>
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
-
-  <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
+<a href="https://www.google.com">Google</a>
+  <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute --><a href="https://www.google.com" target="_blank">Google</a>
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
 
 </body>
